update contact email

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <section id="contact" class="p-4 bg-light rounded">
         <h2 class="h4 mb-3">Contact</h2>
-        <p class="mb-0">Binnenkort komt hier een formulier. Tot die tijd: mail naar <strong>jij@karperlab.nl</strong>.</p>
+        <p class="mb-0">Binnenkort komt hier een formulier. Tot die tijd: mail naar <strong>info@karperlab.nl</strong>.</p>
       </section>
     </div>
   </main>
