--- a/index.html
+++ b/index.html
@@ -7,33 +7,176 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    /* Responsive logo sizing */
+    .navbar-brand img {
+      height: 40px;
+      width: auto;
+    }
+
+    @media (min-width: 992px) {
+      .navbar-brand img {
+        height: 64px;
+      }
+    }
+  
+    /* Improve anchor jumps (so headings aren't tight to the top) */
+    section {
+      scroll-margin-top: 96px;
+    }
+  </style>
 </head>
 <body>
-  <header class="py-5 border-bottom">
+<nav class="navbar navbar-expand-lg bg-white border-bottom">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center" href="#top">
+      <img
+        src="assets/img/Logo_KarperLab_v1.0_crop.png"
+        alt="KarperLab logo"
+        class="d-block"
+      >
+    </a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Menu">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="nav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="#voor-wie">Voor wie</a></li>
+        <li class="nav-item"><a class="nav-link" href="#wat-je-krijgt">Wat je krijgt</a></li>
+        <li class="nav-item"><a class="nav-link" href="#werkwijze">Werkwijze</a></li>
+        <li class="nav-item"><a class="btn btn-primary ms-lg-3" href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+  <header id="top" class="py-4">
     <div class="container">
-      <h1 class="display-5 fw-bold mb-2">KarperLab</h1>
-      <p class="lead mb-4">Persoonlijke karpercoaching aan huis en aan de waterkant.</p>
-      <a class="btn btn-primary btn-lg" href="#contact">Boek een coachingssessie</a>
+      <div class="row align-items-center g-4">
+        <div class="col-lg-8">
+          <h1 class="display-5 fw-bold mb-2">KarperLab</h1>
+          <p class="lead mb-3">Karpercoaching voor drukbezette vissers die met weinig vistijd tóch vaker willen vangen.</p>
+          <p class="mb-0 text-muted">Startregio: Noord-Holland.</p>
+        </div>
+        <div class="col-lg-4">
+          <div class="p-4 bg-light rounded">
+            <h2 class="h5 mb-2">Snel een sessie aanvragen</h2>
+            <p class="mb-3">Mail je water + je doel, dan reageer ik met een voorstel.</p>
+            <a class="btn btn-primary w-100" href="#contact">Mail voor een sessie</a>
+          </div>
+        </div>
+      </div>
     </div>
   </header>
 
   <main class="py-5">
     <div class="container">
-      <h2 class="h4 mb-3">Wat je krijgt</h2>
-      <ul class="list-group mb-5">
-        <li class="list-group-item">Check van je materiaal en rigs</li>
-        <li class="list-group-item">Analyse van jouw (thuis)water en aanpak</li>
-        <li class="list-group-item">Concreet plan + tips voor jouw situatie</li>
-      </ul>
+
+      <section id="voor-wie" class="mb-5">
+        <h2 class="h4 mb-3">Voor wie is dit?</h2>
+        <div class="row g-3">
+          <div class="col-md-4">
+            <div class="h-100 p-4 border rounded">
+              <h3 class="h6">Weinig tijd</h3>
+              <p class="mb-0">Je werkt veel en wilt dat elke sessie telt.</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="h-100 p-4 border rounded">
+              <h3 class="h6">Vaak blanken</h3>
+              <p class="mb-0">Je vangt te weinig en zoekt een aanpak die wél werkt.</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="h-100 p-4 border rounded">
+              <h3 class="h6">Bereid om te investeren</h3>
+              <p class="mb-0">Je wilt gericht verbeteren met praktische coaching.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="wat-je-krijgt" class="mb-5">
+        <h2 class="h4 mb-3">Wat je krijgt</h2>
+        <div class="row g-3">
+          <div class="col-md-4">
+            <div class="h-100 p-4 bg-light rounded">
+              <h3 class="h6">Materiaalcheck</h3>
+              <p class="mb-0">Tips om je rigs, montage en voer effectiever te maken. We kunnen samen een rig knopen en finetunen.</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="h-100 p-4 bg-light rounded">
+              <h3 class="h6">Wateranalyse</h3>
+              <p class="mb-0">We lopen je water af en zoeken naar patronen, hotspots en logische stekken.</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="h-100 p-4 bg-light rounded">
+              <h3 class="h6">Concreet aanvalsplan</h3>
+              <p class="mb-0">Een plan dat past bij jouw tijd: waar, wanneer, hoe en waarmee je dit water het beste bevist.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="werkwijze" class="mb-5">
+        <h2 class="h4 mb-3">Hoe verloopt een sessie?</h2>
+        <div class="row g-3">
+          <div class="col-md-4">
+            <div class="h-100 p-4 border rounded">
+              <div class="fw-semibold mb-1">1) Kennismaken + materiaal</div>
+              <div class="text-muted">Kort kennismaken, jouw set-up bekijken, uitleg en optimaliseren.</div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="h-100 p-4 border rounded">
+              <div class="fw-semibold mb-1">2) Naar het water</div>
+              <div class="text-muted">Rondje lopen met voer/uitrusting, observeren en stekken bepalen.</div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="h-100 p-4 border rounded">
+              <div class="fw-semibold mb-1">3) Plan van aanpak</div>
+              <div class="text-muted">We zetten alles om naar een praktische aanpak voor jouw situatie.</div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <section id="contact" class="p-4 bg-light rounded">
-        <h2 class="h4 mb-3">Contact</h2>
-        <p class="mb-0">Binnenkort komt hier een formulier. Tot die tijd: mail naar <strong>info@karperlab.nl</strong>.</p>
+        <h2 class="h4 mb-2">Contact</h2>
+        <p class="mb-3">Wil je een coachingssessie boeken? Mail me met:</p>
+        <ul class="mb-3">
+          <li>op welk water je vooral vist (globaal)</li>
+          <li>hoe vaak je gemiddeld gaat</li>
+          <li>wat je nu het meeste tegenhoudt</li>
+        </ul>
+        <p class="mb-0">Mail: <a href="mailto:info@karperlab.nl" class="fw-semibold">info@karperlab.nl</a></p>
       </section>
+
+      <footer class="mt-5 pt-4 border-top">
+        <div class="row g-3 align-items-center">
+          <div class="col-md-6">
+            <div class="fw-semibold">KarperLab</div>
+            <div class="text-muted small">Karpercoaching in Noord-Holland (en omgeving).</div>
+          </div>
+          <div class="col-md-6 text-md-end">
+            <a class="link-secondary me-3" href="#top">Naar boven</a>
+            <a class="link-secondary" href="mailto:info@karperlab.nl">info@karperlab.nl</a>
+            <div class="text-muted small mt-2">© <span id="year"></span> KarperLab</div>
+          </div>
+        </div>
+      </footer>
+
     </div>
   </main>
 
   <!-- Bootstrap JS (optioneel, voor dropdowns/modals later) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </html>
