--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 
   <title>KarperLab – Persoonlijke karpercoaching</title>
   <meta name="description" content="KarperLab biedt persoonlijke karpercoaching voor drukbezette vissers in Noord-Holland. Ontvang een concreet aanvalsplan en vang vaker met je beperkte vistijd. Vraag de pilot-sessie aan." />
-    <meta name="theme-color" content="#111417" />
+  <meta name="theme-color" content="#111417" />
+
+  <!-- Favicon / site icon -->
+  <link rel="icon" href="assets/img/Logo_KarperLab_v1.0_B-W.svg" type="image/svg+xml">
+  <link rel="icon" href="assets/img/Logo_KarperLab_v1.0_B-W.svg" sizes="any">
 
   <!-- Open Graph (basis) -->
   <meta property="og:title" content="KarperLab – Persoonlijke karpercoaching" />
