--- a/index.html
+++ b/index.html
@@ -335,7 +335,10 @@
     }
   </style>
 </head>
+
 <body>
+
+<div id="top" aria-hidden="true"></div>
 
 <nav class="navbar navbar-expand-lg kl-navbar">
   <div class="container">
@@ -354,16 +357,16 @@
     <div class="collapse navbar-collapse" id="nav">
       <ul class="navbar-nav ms-auto align-items-lg-center">
         <li class="nav-item"><a class="nav-link" href="#voor-wie">Voor wie</a></li>
-        <li class="nav-item"><a class="nav-link" href="#wat-je-krijgt">Wat je krijgt</a></li>
-        <li class="nav-item"><a class="nav-link" href="#werkwijze">Werkwijze</a></li>
-        <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
+        <li class="nav-item"><a class="nav-link" href="#wat-je-krijgt-cta">Wat je krijgt</a></li>
+        <li class="nav-item"><a class="nav-link" href="#werkwijze-cta">Werkwijze</a></li>
+        <li class="nav-item"><a class="nav-link" href="#faq-cta">FAQ</a></li>
         <li class="nav-item"><a class="btn btn-accent ms-lg-3" href="#pilot-cta">Pilot aanvragen</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<header id="top" class="hero py-5" style="padding-top: calc(3rem + var(--kl-nav-divider-h));">
+<header id="hero" class="hero py-5" style="padding-top: calc(3rem + var(--kl-nav-divider-h));">
   <div class="container">
     <div class="row align-items-center g-4">
       <div class="col-lg-8 hero-copy">
@@ -372,7 +375,7 @@
         <p class="mb-4">Beperkte plekken • antwoord binnen 48 uur</p>
         <div class="d-flex flex-wrap gap-2">
           <a class="btn btn-accent" href="#pilot-cta">Vraag de pilot aan</a>
-          <a class="btn btn-outline-light" href="#wat-je-krijgt">Bekijk wat je krijgt</a>
+          <a class="btn btn-outline-light" href="#wat-je-krijgt-cta">Bekijk wat je krijgt</a>
         </div>
       </div>
 
@@ -449,6 +452,7 @@
           </div>
         </div>
       </div>
+      <div id="wat-je-krijgt-cta" aria-hidden="true"></div>
       </div>
     </div>
   </section>
@@ -478,6 +482,7 @@
           </div>
         </div>
       </div>
+      <div id="werkwijze-cta" aria-hidden="true"></div>
       </div>
     </div>
   </section>
@@ -513,6 +518,7 @@
           </div>
         </div>
       </div>
+      <div id="faq-cta" aria-hidden="true"></div>
       </div>
     </div>
   </section>
@@ -577,35 +583,44 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</script>
 <script>
   // Footer year
   document.getElementById('year').textContent = new Date().getFullYear();
 
-  // Custom scroll for Pilot CTA (anchor from bottom of viewport)
-  document.querySelectorAll('a[href="#pilot-cta"]').forEach(link => {
-    link.addEventListener('click', function (e) {
-      e.preventDefault();
+  // Custom scroll for CTA anchors (position from bottom of viewport)
+  const CTA_SCROLL_OFFSET_FROM_BOTTOM = 50; // px
 
-      const target = document.getElementById('pilot-cta');
-      if (!target) return;
+  function bindBottomAnchorScroll(anchorId) {
+    document.querySelectorAll(`a[href="#${anchorId}"]`).forEach(link => {
+      link.addEventListener('click', function (e) {
+        e.preventDefault();
 
-      const rect = target.getBoundingClientRect();
-      const viewportHeight = window.innerHeight;
+        const target = document.getElementById(anchorId);
+        if (!target) return;
 
-      // Position so CTA button sits slightly above the bottom of the screen
-      const offsetFromBottom = 120; // px
-      const scrollTop =
-        window.pageYOffset +
-        rect.top -
-        (viewportHeight - offsetFromBottom);
+        const rect = target.getBoundingClientRect();
+        const viewportHeight = window.innerHeight;
 
-      window.scrollTo({
-        top: scrollTop,
-        behavior: 'smooth'
+        const scrollTop =
+          window.pageYOffset +
+          rect.top -
+          (viewportHeight - CTA_SCROLL_OFFSET_FROM_BOTTOM);
+
+        window.scrollTo({
+          top: scrollTop,
+          behavior: 'smooth'
+        });
       });
     });
-  });
+  }
+
+  // Bind all bottom-anchors that should land near the bottom of the viewport
+  [
+    'pilot-cta',
+    'wat-je-krijgt-cta',
+    'werkwijze-cta',
+    'faq-cta'
+  ].forEach(bindBottomAnchorScroll);
 </script>
 </body>
 </html>
