--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <meta name="description" content="KarperLab biedt persoonlijke karpercoaching voor drukbezette vissers in Noord-Holland. Ontvang een concreet aanvalsplan en vang vaker met je beperkte vistijd. Vraag de pilot-sessie aan." />
   <meta name="theme-color" content="#111417" />
 
+  <!-- SEO: canonical & robots -->
+  <link rel="canonical" href="https://www.karperlab.nl/">
+  <meta name="robots" content="index,follow,max-image-preview:large">
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="KarperLab – Persoonlijke karpercoaching">
+  <meta name="twitter:description" content="Persoonlijke karpercoaching voor drukbezette vissers in Noord-Holland. Leer slimmer karpervissen met een concreet aanvalsplan.">
+  <meta name="twitter:image" content="https://www.karperlab.nl/assets/img/photos/voorwie_drone-banner.jpg">
+
   <!-- Favicon / site icon -->
   <link rel="icon" href="assets/img/Logo_KarperLab_v1.0_B-W.svg" type="image/svg+xml">
   <link rel="icon" href="assets/img/Logo_KarperLab_v1.0_B-W.svg" sizes="any">
@@ -17,7 +27,11 @@
   <meta property="og:description" content="Ontvang een concreet aanvalsplan om vaker te vangen met je beperkte vistijd. Vraag de pilot-sessie aan." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.karperlab.nl" />
-  <meta property="og:image" content="https://www.karperlab.nl/assets/img/Logo_KarperLab_v1.1_creme.png" />
+  <meta property="og:image" content="https://www.karperlab.nl/assets/img/photos/voorwie_drone-banner.jpg" />
+  <meta property="og:image:secure_url" content="https://www.karperlab.nl/assets/img/photos/voorwie_drone-banner.jpg" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -334,6 +348,42 @@
       color: var(--kl-muted) !important;
     }
   </style>
+  <!-- Structured data: LocalBusiness & Service -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "@id": "https://www.karperlab.nl/#localbusiness",
+    "name": "KarperLab",
+    "url": "https://www.karperlab.nl/",
+    "logo": "https://www.karperlab.nl/assets/img/Logo_KarperLab_v1.1_creme.png",
+    "image": "https://www.karperlab.nl/assets/img/Logo_KarperLab_v1.1_creme.png",
+    "email": "info@karperlab.nl",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Zaanstad",
+      "addressRegion": "NH",
+      "addressCountry": "NL"
+    },
+    "areaServed": {
+      "@type": "AdministrativeArea",
+      "name": "Noord-Holland"
+    },
+    "serviceOffered": {
+      "@type": "Service",
+      "name": "Persoonlijke karpercoaching",
+      "description": "Persoonlijke karpercoaching en visbegeleiding voor karpervissers die efficiënter willen leren karpervissen met beperkte tijd.",
+      "areaServed": {
+        "@type": "AdministrativeArea",
+        "name": "Noord-Holland"
+      },
+      "provider": {
+        "@type": "LocalBusiness",
+        "name": "KarperLab"
+      }
+    }
+  }
+  </script>
 </head>
 
 <body>
