Google Analitics toegevoegd

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
   <meta name="description" content="KarperLab biedt persoonlijke karpercoaching voor drukbezette vissers in Noord-Holland. Ontvang een concreet aanvalsplan en vang vaker met je beperkte vistijd. Vraag de pilot-sessie aan." />
   <meta name="theme-color" content="#111417" />
 
+  <!-- Google Analytics (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZFBF432BDJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ZFBF432BDJ', {
+      anonymize_ip: true
+    });
+  </script>
+
   <!-- SEO: canonical & robots -->
   <link rel="canonical" href="https://www.karperlab.nl/">
   <meta name="robots" content="index,follow,max-image-preview:large">
