--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <meta name="theme-color" content="#111417" />
 
   <!-- Google Analytics (GA4) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZFBF432BDJ"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ECMFK8PBRD"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-ZFBF432BDJ', {
+    gtag('config', 'G-ECMFK8PBRD', {
       anonymize_ip: true
     });
   </script>
