--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
     }
 
     .navbar .nav-link { color: rgba(246,247,245,0.92); }
-    .navbar .nav-link:hover { color: #FFFFFF; }
+    /* Make hovered nav links use the accent color like KlasLab */
+    .navbar .nav-link:hover { color: var(--kl-accent); }
     .navbar .navbar-brand { color: #111417; }
 
     .navbar-toggler { border-color: rgba(255,255,255,0.3); }
