--- a/index.html
+++ b/index.html
@@ -660,9 +660,14 @@
     <div class="container">
       <footer class="pt-4">
         <div class="row g-3 align-items-center">
-          <div class="col-md-6">
-            <div class="fw-semibold">KarperLab</div>
-            <div class="text-muted small">Karpercoaching in Noord-Holland en omgeving.</div>
+            <div class="col-md-6 d-flex align-items-center">
+            <a class="footer-brand me-3" href="#top" aria-label="KarperLab home">
+              <img src="assets/img/Logo_KarperLab_v1.1_invert.png" alt="KarperLab logo">
+            </a>
+            <div>
+              <div class="fw-semibold">KarperLab</div>
+              <div class="text-muted small">Karpercoaching in Noord-Holland en omgeving.</div>
+            </div>
           </div>
           <div class="col-md-6 text-md-end">
             <a class="link-light text-decoration-none me-3" href="#top">Naar boven</a><a class="link-light text-decoration-none me-3" href="#privacy">Privacy</a>
