fix: update privacy and cookie information for clarity

--- a/index.html
+++ b/index.html
@@ -698,8 +698,8 @@
     <div class="container">
       <div class="kl-panel">
       <h2 class="h4 mb-2">Privacy & cookies</h2>
-      <p class="mb-2">Deze site gebruikt geen tracking en plaatst geen marketingcookies.</p>
-      <p class="mb-2">Als je op “Mail voor de pilot” klikt, opent je e-mailapp met een ingevuld bericht. Jij beslist of je het verstuurt. Je gegevens worden alleen gebruikt om op je aanvraag te reageren.</p>
+      <p class="mb-2">GA4, geanonimiseerd (IP). Geen marketingcookies.</p>
+      <p class="mb-2">Mail-link opent je e-mailapp. Je mail wordt alleen gebruikt om te reageren.</p>
       <p class="mb-0 text-muted small">Vragen? Mail naar <a href="mailto:info@karperlab.nl">info@karperlab.nl</a>.</p>
       </div>
     </div>
